tests/negative/typecheck/unit.orng
fn main() -> Int {()}
fn lol() -> Int{()}